# VIPDocuments

./: .gitignore
Homework1/: Homework1.tex
Homework1/final/: 2014_01_15_Homework1_Ivan_Jimenez.tex
PlanningAndControls/: CMakeLists.txt  README.txt  main.cpp
PlanningAndControls/cmake_files/: CMakeLists.txt
PlanningAndControls/cmake_files/Modules/: StandardBuild.cmake
PlanningAndControls/doc/: Instruction.txt  README.txt  tree.txt
PlanningAndControls/include/: hello.h
PlanningAndControls/lib/: readme.txt
PlanningAndControls/pic/: circular_map.pgm
PlanningAndControls/src/: CMakeLists.txt
PlanningAndControls/src/common/: CMakeLists.txt  algorithm.cpp  algorithm.h  astar.cpp  astar.h  path.cpp  path.h  point.cpp  point.h  point2d  point2d.cpp  point2d.h  space.cpp  space.h  space2d.cpp  space2d.h
PlanningAndControls/src/main/: CMakeLists.txt  algorithm.h  controller.h  display.h  main.cpp  mainwindow.cpp  mainwindow.h  path.h  point.h  space.h  userinput.h
PlanningAndControls/src/tests/: CMakeLists.txt  alltests.cpp
PlanningAndControls/src/util/: CMakeLists.txt  hello.cpp  main.cpp
Presentation/: 140206_Presentation1_PlanningAndControls.tex
Proposal/: 140201_PlanningAndControls_Proposal.tex
